crates/dbdict/tests/snapshots/validate_spec__enum_non_string_label.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 315
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: status
        type: enum
        values: {active: 1, inactive: 2}
────────────────────────────────────────
error: [Q-1-11]
 --> dict.yaml:8:18
  |
8 |         values: {active: 1, inactive: 2}
  |                  ^^^^^^^^^^^^^^^^^^^^^^ Expected array, got object
  |
  = help: Use YAML array syntax: `[item1, item2]` or list format?
